// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<mention> demo: render [basic] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\" style=\\"width: 100%;\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-input-wrapper\\"><!----><input class=\\"arco-input arco-input-size-medium\\" type=\\"text\\" placeholder=\\"enter something\\" value=\\"\\"><!----><!----></span>
    <!---->
  </div>
  <!---->
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-mention\\">
      <div class=\\"arco-textarea-wrapper\\">
        <!--v-if--><textarea class=\\"arco-textarea\\" placeholder=\\"enter something\\" value=\\"\\"></textarea>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>"
`;

exports[`<mention> demo: render [prefix] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\" style=\\"width: 100%;\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-input-wrapper\\"><!----><input class=\\"arco-input arco-input-size-medium\\" type=\\"text\\" placeholder=\\"input @\\" value=\\"\\"><!----><!----></span>
    <!---->
  </div>
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-input-wrapper\\"><!----><input class=\\"arco-input arco-input-size-medium\\" type=\\"text\\" placeholder=\\"input #\\" value=\\"\\"><!----><!----></span>
    <!---->
  </div>
  <!---->
  <div class=\\"arco-space-item\\"><span class=\\"arco-input-wrapper\\"><!----><input class=\\"arco-input arco-input-size-medium\\" type=\\"text\\" placeholder=\\"input $\\" value=\\"\\"><!----><!----></span>
    <!---->
  </div>
</div>"
`;
